[package]
name = "to_universal_path"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.153"
winapi = "0.3.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
windows = "0.56.0"
features=[
    "Win32_Foundation",
    "Win32_NetworkManagement_WNet"
]
